# SGPyBackendUtils-Public

./: Backend.py  DOCS.md  README  README.md  example.env  example_login.py  pyproject.toml  requirements.txt
examples/: example_login.py
src/StumbleUtils/: Backend.py  CryptoUtils.py  __init__.py
src/StumbleUtils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sgpy_backend_utils.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
