[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "StumbleUtils"
version = "2.1.0"
description = "Backend utilities for interacting with the Stumble Guys API."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "SGPyBackendUtils-Public contributors" },
]
keywords = [
  "stumble-guys",
  "backend",
  "api",
  "python",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "requests>=2.31",
  "python-dotenv>=1.0",
  "PyJWT>=2.7",
  "pycryptodome>=3.20",
  "DateTime>=4.9",
  "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["StumbleUtils*"]
